# VendingMachine

VendingMachine/: CMakeLists.txt  main.cpp
VendingMachine/Domain/: InvalidIDException.cpp  InvalidPriceException.cpp  NegativeIdException.cpp  NotEnoughMoneyException.cpp  Product.cpp  ProductValidator.cpp  UniqueIDException.cpp
VendingMachine/Headers/: InvalidIDException.h  InvalidPriceException.h  NegativeIdException.h  NotEnoughMoneyException.h  Product.h  ProductValidator.h  UniqueIDException.h
VendingMachine/Repository/: FileRepository.h  Repository.h
VendingMachine/Service/: ProductService.cpp  ProductService.h
VendingMachine/Tests/: Tests.cpp  Tests.h
VendingMachine/UserInterface/: UserInterface.cpp  UserInterface.h
